<resources>

    <string name="app_name">Bote BETA</string>
    <string name="menu_settings">Settings</string>
    <string name="add_new">Nuevo</string>
    <string name="remove">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="icono_bote">Icono del bote</string>
    <string name="bote_inserted">Bote añadido</string>
    <string name="bote_deleted">Bote eliminado</string>
    <string name="bote_updated">Bote actualizado</string>
    <string name="title_activity_main">Bote (BETA)</string>
    <string name="title_activity_bote_consulta">Detalles bote</string>
    <string name="title_activity_bote_mantenimiento">Nuevo bote</string>
    <string name="title_activity_bote_edit">Editar bote</string><string name="nombre">Nombre</string>
    <string name="tope">Tope de dinero</string>
    <string name="tope_editor_sin_tope">Sin tope</string>
    <string name="tipo">Tipo</string>
    <string name="guardar">Guardar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="fecha_creacion">Fecha de creación</string>
    <string name="fecha_limite">Fecha límite</string>
    <string name="fecha_limite_editor_sin_limite">Sin límite</string>
    <string name="toca_para_escribir">Toca para escribir</string>
    <string name="toca_para_editar">Toca para editar</string>
    <string name="toca_para_seleccionar">Toca para seleccionar</string>
    <string name="sin_nombre">(Sin nombre)</string>
    <string name="total">Total</string>
    <string name="total_hint">0,00 €</string>
    <string name="administrador">Administrador</string>
    <string name="sin_administrador">Sin asignar</string>
    <string name="introduce_valor">Introduce un valor</string>
    <string name="definir_fecha">Definir fecha</string>
    <string name="definir">Definir</string>
    <string name="descripcion">Descripción</string>
    <string name="importe">Importe</string>
    <string name="titulo_add_movimiento">Añadir movimiento</string>
    <string name="ingresar">Ingresar</string>
    <string name="retirar">Retirar</string>
    <string name="devolver">Devolver</string><string name="concepto">Concepto</string>
    <string name="add_persona">Añadir persona</string>
    <string name="icono_persona">Icono de la persona</string>
    <string name="personas">Personas</string>
    <string name="persona_inserted">Persona añadida</string>
    <string name="persona_deleted">Persona eliminada</string>
    <string name="persona">Persona</string>
    <string name="nueva">Nueva</string>
    <string name="desde_contacto">Desde contacto</string>
    <string name="nueva_persona">Nueva persona</string>
    
    <string name="informacion">Información</string>
    <string name="movimientos">Movimientos</string>
    <string name="icono_movimiento">Icono movimiento</string>
    <string name="movimiento_inserted">Movimiento añadido</string>
    <string name="sin_descripcion">Sin descripción</string>
    <string name="movimiento_deleted">Movimiento eliminado</string>
    <string name="add_movimiento">Añadir movimiento</string>
    <string name="ingresado_total">Ingresado total</string>
    <string name="devoluciones">Devoluciones</string>
    <string name="ingresado_actual">Ingresado actual</string>
    <string name="gastado">Gastado</string>
    <string name="disponible">Disponible</string>
    

</resources>