<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_bote_consulta_add_movimiento"
        android:icon="@drawable/ic_action_add_movimiento"
        android:showAsAction="ifRoom"
        android:title="@string/add_movimiento">
        <menu>
            <item
                android:id="@+id/menu_bote_consulta_movimiento_ingresar"
                android:icon="@drawable/ic_action_add_movimiento"
                android:title="@string/ingresar"/>
            <item
                android:id="@+id/menu_bote_consulta_movimiento_retirar"
                android:icon="@drawable/ic_action_add_movimiento"
                android:title="@string/retirar"/>
            <item
                android:id="@+id/menu_bote_consulta_movimiento_devolver"
                android:icon="@drawable/ic_action_add_movimiento"
                android:title="@string/devolver"/>
        </menu>
    </item>

</menu>