<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="288dp" >

    <LinearLayout
        android:id="@+id/linear_layout_nueva_persona_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/ed_nueva_persona_dialog_nombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp" >

            <Button
                android:id="@+id/btn_nueva_persona_dialog_cancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar" />

            <Button
                android:id="@+id/btn_nueva_persona_dialog_aceptar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aceptar" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>