<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="288dp" >

    <LinearLayout
        android:id="@+id/linear_layout_nuevo_movimiento_dialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

<!--         <RadioGroup -->
<!--             android:id="@+id/radiogroup_nuevo_movimiento_dialog" -->
<!--             android:layout_width="fill_parent" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:orientation="horizontal" > -->

<!--             <RadioButton -->
<!--                 android:id="@+id/radio_nuevo_movimiento_dialog_ingresar" -->
<!--                 android:layout_width="0dp" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_weight="1" -->
<!--                 android:checked="true" -->
<!--                 android:text="@string/ingresar" /> -->

<!--             <RadioButton -->
<!--                 android:id="@+id/radio_nuevo_movimiento_dialog_retirar" -->
<!--                 android:layout_width="0dp" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:layout_weight="1" -->
<!--                 android:text="@string/retirar" /> -->
<!--         </RadioGroup> -->

        <EditText
            android:id="@+id/ed_nuevo_movimiento_dialog_importe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/importe"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/ed_nuevo_movimiento_dialog_concepto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/concepto"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            android:selectAllOnFocus="true" />

        <LinearLayout
            android:id="@+id/linear_layout_nuevo_movimiento_dialog_persona"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/background_item"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/txt_nuevo_movimiento_dialog_persona_titulo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/persona"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spin_nuevo_movimiento_dialog_persona"
                style="@style/SpinnerAsEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="true"
                android:prompt="@string/persona"
                android:spinnerMode="dialog"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp" >

            <Button
                android:id="@+id/btn_nuevo_movimiento_dialog_cancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar" />

            <Button
                android:id="@+id/btn_nuevo_movimiento_dialog_aceptar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aceptar" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>